--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -9,18 +9,20 @@
 			<%= f.label :name %><br />
 			<%= f.text_field :name, class: 'form-control filename', readonly: true, placeholder: 'Filename is taken from uploaded file...', autocomplete: 'off' %>
 		</div>
-		<div class="col-sm-8">
-			<%= f.label :description %><br />
-			<%= f.text_field :description, class: 'form-control' %>
-		</div>
-	</div>
-	<div class="form-group row">
-		<div class="col-sm-4">
+    <div class="col-sm-4">
 			<%= f.label :file_type %><br />
 			<%= f.text_field :file_type, readonly: true, class: 'form-control file-type' %>
 		</div>
-		<div class="col-sm-5 upload-field">
-      <div class="col-sm-5">
+	</div>
+	<div class="form-group row">
+    <div class="col-sm-8">
+			<%= f.label :description %><br />
+			<%= f.text_field :description, class: 'form-control' %>
+		</div>
+  </div>
+  <div class="form-group row">
+		<div class="col-sm-5">
+      <div>
         <%= f.label :use_metadata_convention, "Do you use SCP conventional names for required metadata column headers?" %> <%= render partial: 'metadata_convention_help_popover', locals: {id: f.object.id.to_s} %><br />
         <%= f.label :use_metadata_convention_true do %>
           <%= f.radio_button :use_metadata_convention, true, disabled: !study_file.new_record?%>
@@ -32,6 +34,10 @@
           No
         <% end %>
       </div>
+    </div>
+  </div>
+  <div class="form-group row">
+    <div class="col-sm-5 upload-field">
       <% if !study_file.upload_file_name.nil? %>
         <p><label>Link to file </label><br /><%= render partial: '/layouts/download_link', locals: {study: @study, study_file: study_file} %></p>
       <% else %>
