--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -22,18 +22,17 @@
   </div>
   <div class="form-group row">
 		<div class="col-sm-5">
-      <div>
-        <%= f.label :use_metadata_convention, "Do you use SCP conventional names for required metadata column headers?" %> <%= render partial: 'metadata_convention_help_popover', locals: {id: f.object.id.to_s} %><br />
-        <%= f.label :use_metadata_convention_true do %>
-          <%= f.radio_button :use_metadata_convention, true, checked: true, disabled: !study_file.new_record?%>
-          Yes
-        <% end %>
-        &nbsp;
-        <%= f.label :use_metadata_convention_false do %>
-          <%= f.radio_button :use_metadata_convention, false, checked: false, disabled: !study_file.new_record? %>
-          No
-        <% end %>
-      </div>
+      <%= f.label :use_metadata_convention, "Do you use SCP conventional names for required metadata column headers?" %> <%= render partial: 'metadata_convention_help_popover', locals: {id: f.object.id.to_s} %><br />
+      <%= f.label :use_metadata_convention_true do %>
+        <%= f.radio_button :use_metadata_convention, true, checked: true, disabled: !study_file.new_record?%>
+        Yes
+      <% end %>
+      &nbsp;
+      <%= f.label :use_metadata_convention_false do %>
+        <%= f.radio_button :use_metadata_convention, false, checked: false, disabled: !study_file.new_record? %>
+        No
+      <% end %>
+      <div id="use-metadata-convention-message"></div>
     </div>
   </div>
   <div class="form-group row">
@@ -70,13 +69,38 @@
 
 	<script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
 
+    function setMetadataConventionMessage(useMetadataConvention) {
+        var message;
+        if (useMetadataConvention === true) {
+          message =
+            `This makes your data discoverable in advanced search.<br/>` +
+            `If the file fails metadata convention validation, you will be emailed messages to help correct it.`
+        } else {
+          const url = 'https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-File#scp-conventional-file-format'
+          message =
+            `Use the SCP metadata convention ("Yes") to make your data discoverable in advanced search.<br/>` +
+            `Learn <a href="${url}" target="_blank" rel="noreferrer">how to convert your file</a>.`
+        }
+        console.log(useMetadataConvention)
+        console.log(message)
+        $('#use-metadata-convention-message').html(message + '<br/>')
+    }
+
 		$(function() {
 			if (<%= !study_file.upload_file_name.nil? %>) {
 				completeWizardStep('initialize_metadata_form_nav');
 				console.log('incrementing status for metadata upload');
 				$('#initialize_metadata_form_completed').replaceWith("<%= escape_javascript(render partial: 'step_completed', locals: {id: 'initialize_metadata_form_completed'}) %>");
 				$('#initialize_metadata_form_nav_completed').html("<span class='fas fa-check text-success'></span>");
-			}
+      }
+
+      $(document).on('change', '[name="study_file[use_metadata_convention]"]', (event) => {
+        const useMetadataConvention = (event.target.value === 'true')
+        setMetadataConventionMessage(useMetadataConvention)
+      });
+
+      // Default to use the convention
+      setMetadataConventionMessage(true)
 
 			$('#metadata_form').fileupload({
 				url: "<%= upload_study_path(@study._id) %>",
