--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -22,13 +22,17 @@
   </div>
   <div class="form-group row">
 		<div class="col-sm-6">
-      <%= f.label :use_metadata_convention, "Do you use SCP conventional names for required metadata column headers?" %> <%= render partial: 'metadata_convention_help_popover', locals: {id: f.object.id.to_s} %><br />
-      <%= f.label :use_metadata_convention_true do %>
+      <%= f.label :use_metadata_convention do %>
+        Do you use SCP conventional names for required metadata column headers?
+        <%= render partial: 'metadata_convention_help_popover', locals: {id: f.object.id.to_s} %>
+      <% end %>
+      <br />
+      <%= f.label :use_metadata_convention_true, 'data-analytics-name': 'metadata-convention-optin' do %>
         <%= f.radio_button :use_metadata_convention, true, checked: true, disabled: !study_file.new_record?%>
         Yes
       <% end %>
       &nbsp;
-      <%= f.label :use_metadata_convention_false do %>
+      <%= f.label :use_metadata_convention_false, 'data-analytics-name': 'metadata-convention-optout' do %>
         <%= f.radio_button :use_metadata_convention, false, checked: false, disabled: !study_file.new_record? %>
         No
       <% end %>
@@ -86,8 +90,6 @@
             `Use the SCP metadata convention ("Yes") to make your data discoverable in ${advancedLink}.<br/>` +
             `Learn <a href="${formatUrl}" target="_blank" rel="noreferrer">how to convert your file</a>.  ${contactUs}`
         }
-        console.log(useMetadataConvention)
-        console.log(message)
         $('#use-metadata-convention-message').html(message + '<br/>')
     }
 
