--- a/app/javascript/styles/_search.scss
+++ b/app/javascript/styles/_search.scss
@@ -309,8 +309,14 @@ nav.search-links, #search-panel {
   .expression-graph {
     min-height: 450px
   }
-  .graph-controls {
-    padding-top: 100px;
+  .graph-container {
+    display: flex;
+    align-items: center;
+  }
+  .dot-plot-legend-container {
+    margin-top: 1em;
+    width: 400px;
+    height: 70px;
   }
   .gene-title {
     position: absolute;
@@ -319,6 +325,10 @@ nav.search-links, #search-panel {
     top: 25px;
     left: 30px;
     z-index: 100;
+  }
+  /* hide morpheus toolbar */
+  div[data-name="toolbar"] {
+    display: none;
   }
 }
 
