--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -135,8 +135,8 @@
             </ul>
           </div>
           <div class="row">
-            <p class="col-sm-12 text-center">Cluster files with more than 1000 individual points will be subsampled after
-              being successfully ingested. <%= link_to "Learn More <i class='fas fa-question-circle'></i>".html_safe,
+            <p class="col-sm-12 text-center">Once your cluster file has been successfully ingested, additional representative
+              subsamples of the full resolution data will be stored as well. <%= link_to "Learn More <i class='fas fa-question-circle'></i>".html_safe,
                           'https://github.com/broadinstitute/single_cell_portal/wiki/Subsampling-Cluster-Files', target: :_blank,
                                                        class: 'btn btn-default'%>
             </p>
