--- a/app/views/site/_boxpoints_picker.html.erb
+++ b/app/views/site/_boxpoints_picker.html.erb
@@ -1,6 +1,6 @@
 <div id="boxpoints-picker">
-	<%= label_tag :boxpoints_select, 'Data Points' %><i class='fas fa-fw fa-question-circle' data-toggle="tooltip" title="Control rendering of data/jitter points in distribution plots."></i>
-  <%= select_tag :boxpoints_select, options_for_select([['None', ''], ['All', 'all'], ['Outliers', 'outliers'], ['Suspected Outliers', 'suspectedoutliers']], params[:boxpoints].nil? ? 'all' : params[:boxpoints]), class: 'form-control' %>
+	<%= label_tag :boxpoints_select, 'Data points' %><i class='fas fa-fw fa-question-circle' data-toggle="tooltip" title="Control rendering of data/jitter points in distribution plots."></i>
+  <%= select_tag :boxpoints_select, options_for_select([['None', ''], ['All', 'all'], ['Outliers', 'outliers'], ['Suspected outliers', 'suspectedoutliers']], params[:boxpoints].nil? ? 'all' : params[:boxpoints]), class: 'form-control' %>
 </div>
 
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
