Change "multimodality" to "modality", update menu

--- a/app/views/studies/_expression_file_info_fields.html.erb
+++ b/app/views/studies/_expression_file_info_fields.html.erb
@@ -25,8 +25,8 @@
                  {}, class: 'form-control' %>
   </div>
   <div class="col-sm-2">
-    <%= f.label :multimodality %><br />
-    <%= f.select :multimodality, options_for_select(ExpressionFileInfo::MULTIMODALITY_VALUES, f.object.multimodality),
+    <%= f.label :modality %><br />
+    <%= f.select :modality, options_for_select(ExpressionFileInfo::MODALITY_VALUES, f.object.modality),
                  {include_blank: true}, class: 'form-control' %>
 
   </div>
