Default modality to "Transcriptomic: unbiased"

--- a/app/views/studies/_expression_file_info_fields.html.erb
+++ b/app/views/studies/_expression_file_info_fields.html.erb
@@ -27,7 +27,7 @@
   <div class="col-sm-2">
     <%= f.label :modality %><br />
     <%= f.select :modality, options_for_select(ExpressionFileInfo::MODALITY_VALUES, f.object.modality),
-                 {include_blank: true}, class: 'form-control' %>
+                 {}, class: 'form-control' %>
 
   </div>
 </div>
