--- a/app/views/studies/_expression_file_info_fields.html.erb
+++ b/app/views/studies/_expression_file_info_fields.html.erb
@@ -22,12 +22,12 @@
     <%= f.label :library_preparation_protocol, "Library Preparation Protocol <i class='text-danger'>*</i>".html_safe %><br />
     <%= f.select :library_preparation_protocol,
                  options_for_select(ExpressionFileInfo::LIBRARY_PREPARATION_VALUES, f.object.library_preparation_protocol),
-                 {}, class: 'form-control' %>
+                 {prompt: 'Select one...'}, class: 'form-control' %>
   </div>
   <div class="col-sm-2">
     <%= f.label :modality %><br />
-    <%= f.select :modality, options_for_select(ExpressionFileInfo::MODALITY_VALUES, f.object.modality),
-                 {}, class: 'form-control' %>
+    <%= f.select :modality, options_for_select(ExpressionFileInfo::MODALITY_VALUES, [f.object.modality.blank? ? 'Transcriptomic: unbiased' : f.object.modality]),
+                 {include_blank: true}, class: 'form-control' %>
 
   </div>
 </div>
