--- a/app/views/studies/_initialize_expression_form.html.erb
+++ b/app/views/studies/_initialize_expression_form.html.erb
@@ -24,7 +24,7 @@
   <div class="form-group row">
     <div class="col-sm-4">
       <%= f.label :taxon_id, "Species <i class='text-danger'>*</i>".html_safe %> <%= render partial: 'taxon_help_popover', locals: {id: study_file.id.to_s} %><br />
-      <%= f.select :taxon_id, options_from_collection_for_select(Taxon.sorted, :id, :display_name, study_file.taxon_id), {prompt: 'Please select a species for this file'}, {class: 'form-control'} %>
+      <%= f.select :taxon_id, options_from_collection_for_select(Taxon.sorted, :id, :display_name, study_file.taxon_id), {prompt: 'Select one...'}, {class: 'form-control'} %>
     </div>
     <div class="col-sm-8">
       <%= f.label :y_axis_label, 'Expression Axis Label' %>&nbsp;<span class="fas fa-question-circle expression-label-tooltip" data-toggle="tooltip" data-placement="right" title="This is displayed as the axis label for box & scatter plots showing expression values.  This label is global to all expression values.<%= @study.has_expression_label? ? ' Please use the study default options form to update this value.' : '' %>"></span> <br />
