Restore sane default handling

--- a/app/views/studies/_expression_file_info_fields.html.erb
+++ b/app/views/studies/_expression_file_info_fields.html.erb
@@ -26,8 +26,7 @@
   </div>
   <div class="col-sm-2">
     <%= f.label :modality %><br />
-    <%= f.select :modality, options_for_select(ExpressionFileInfo::MODALITY_VALUES, [f.object.modality.blank? ? 'Transcriptomic: unbiased' : f.object.modality]),
-                 {include_blank: true}, class: 'form-control' %>
-
+    <%= f.select :modality, options_for_select(ExpressionFileInfo::MODALITY_VALUES, f.object.modality),
+                 {}, class: 'form-control' %>
   </div>
 </div>
