--- a/app/views/preset_searches/show.html.erb
+++ b/app/views/preset_searches/show.html.erb
@@ -3,8 +3,8 @@
 <dl class="dl-horizontal" id="preset-search-attributes">
   <dt>Identifier</dt>
   <dd><%= @preset_search.identifier %></dd>
-  <dt>Whitelist</dt>
-  <dd><%= @preset_search.accession_whitelist.join(', ') %></dd>
+  <dt>Accession List</dt>
+  <dd><%= @preset_search.accession_list.join(', ') %></dd>
   <dt>Search Terms</dt>
   <dd><%= @preset_search.search_terms.join(', ') %></dd>
   <dt>Facets</dt>
