--- a/app/views/preset_searches/_form.html.erb
+++ b/app/views/preset_searches/_form.html.erb
@@ -19,7 +19,7 @@
     </div>
     <div id="preset-search-help" class="panel-collapse collapse <%= @preset_search.new_record? ? 'in' : nil %>">
       <div class="panel-body">
-        <h5>Whitelist</h5>
+        <h5>Accession List</h5>
         <p>
           Enter study accessions, space-delimited (no commas).  These studies will <strong>always</strong> be returned in results first.<br />
           <span class="help-block">Example: <code>SCP1 SCP2 SCP3</code></span>
@@ -53,8 +53,8 @@
       <%= form.select :public, options_for_select([['Yes',1],['No',0]], @preset_search.public? ? 1 : 0), {}, class: 'form-control' %>
     </div>
     <div class="col-sm-6">
-      <%= form.label :accession_whitelist, 'Whitelist' %>
-      <%= form.text_field :accession_whitelist, class: 'form-control' %>
+      <%= form.label :accession_list, 'Accession List' %>
+      <%= form.text_field :accession_list, class: 'form-control' %>
     </div>
   </div>
 
