--- a/app/views/studies/_orphaned_study_file_form.html.erb
+++ b/app/views/studies/_orphaned_study_file_form.html.erb
@@ -38,7 +38,7 @@
     <% elsif study_file.file_type == 'Metadata' %>
       <%= render partial: 'metadata_file_fields', locals: {f: f.dup} %>
     <% elsif study_file.file_type == 'Expression Matrix' || study_file.file_type == 'MM Coordinate Matrix' %>
-      <%= render partial: 'expression_file_fields', locals: {f: f.dup} %>
+      <%= render partial: 'expression_file_fields', locals: {study_file: study_file, f: f.dup} %>
     <% end %>
   </div>
   <div class="form-group row">
