--- a/app/views/studies/_shared_sync_functions.js.erb
+++ b/app/views/studies/_shared_sync_functions.js.erb
@@ -18,7 +18,7 @@ $('#study-file-<%= study_file.id %>').on('change', '.file-type', function() {
         nameField.val(fileName);
         nameField.attr('readonly', 'readonly');
     } else if (fileType === 'Expression Matrix' || fileType === 'MM Coordinate Matrix') {
-        extraInfo.html("<%= j(render partial: 'expression_file_fields', locals: {f: f.dup}) %>");
+        extraInfo.html("<%= j(render partial: 'expression_file_fields', locals: {study_file: study_file, f: f.dup}) %>");
         taxonTarget.html("<%= j(render partial: 'taxon_fields', locals: {f: f.dup}) %>");
         nameField.val(fileName);
         nameField.attr('readonly', 'readonly');
