--- a/app/views/studies/_metadata_convention_help_popover.html.erb
+++ b/app/views/studies/_metadata_convention_help_popover.html.erb
@@ -1,5 +1,5 @@
 <a href="#/" title="Why use the metadata convention?" class="badge" id="metadata-convention-popover-<%= id %>"
-   data-content="Using the metadata convention will enable your data to be discovered through an upcoming faceted search interface.  Using the convention means extra validation will be applied to ensure your metadata conforms to standard vocabularies.  <a href='https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-Convention' target='_blank'>Learn more</a>."
+   data-content="Using the metadata convention will enable your data to be discovered through an upcoming faceted search interface.  Using the convention means extra validation will be applied to ensure your metadata conforms to standard vocabularies.  <a href='https://singlecell.zendesk.com/hc/en-us/articles/360061006411-Metadata-Convention' target='_blank'>Learn more</a>."
    data-toggle="popover"
    data-analytics-name="metadata-convention-popover">
   <span class="fas fa-info"></span>
