--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -89,7 +89,7 @@
             <%= image_tag "metadata-convention-explainer.jpg" %>
           </div>
         </div>
-        <a id="metadata-convention-example-link" href="https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-File#Required-Conventional-Metadata" target="_blank" rel="noreferrer">View required conventional metadata</a>
+        <a id="metadata-convention-example-link" href="https://singlecell.zendesk.com/hc/en-us/articles/360060609852-Required-Metadata" target="_blank" rel="noreferrer">View required conventional metadata</a>
       </div>
 
       <div id="container-<%= @metadata_file.id %>">
@@ -129,7 +129,7 @@
           <div class="row">
             <p class="col-sm-12 text-center">Once your cluster file has been successfully ingested, additional representative
               subsamples of the full resolution data will be stored as well. <%= link_to "Learn More <i class='fas fa-question-circle'></i>".html_safe,
-                          'https://github.com/broadinstitute/single_cell_portal/wiki/Subsampling-Cluster-Files', target: :_blank,
+                          'https://singlecell.zendesk.com/hc/en-us/articles/360060610032-Cluster-File-Subsampling', target: :_blank,
                                                        class: 'btn btn-default'%>
             </p>
           </div>
@@ -187,7 +187,7 @@
         <div class="well well-sm">
           <h2>Step 5. Upload Sequence Data Files <small class="initialize-label" id="initialize_primary_data_form_completed"><span class="label label-info">Optional</span></small></h2>
           <p class="lead"><strong>Primary Human Data</strong>: Primary sequence data derived from humans should be stored in other biological databases and can be linked here by selecting 'Yes' for 'Primary Human Data' and then providing a link in the text field.</p>
-          <p class="lead"><strong>Non-human Data</strong>: If you have a few, small (under 2GB) non-human sequence files, they can be uploaded here. For uploading many or larger files, please refer to the instructions <%= link_to 'on our wiki', 'https://github.com/broadinstitute/single_cell_portal/wiki/Uploading-Files-Using-Gsutil-Tool', target: :_blank %>.</p>
+          <p class="lead"><strong>Non-human Data</strong>: If you have a few, small (under 2GB) non-human sequence files, they can be uploaded here. For uploading many or larger files, please refer to the instructions <%= link_to 'on our Zendesk guide', 'https://singlecell.zendesk.com/hc/en-us/articles/360061006011-Uploading-Large-Files-Using-Gsutil-Tool', target: :_blank %>.</p>
           <p class="lead">If you already have <code>gsutil</code> installed you can upload files directly using the following command:</p>
           <pre class="lead">gsutil -m cp /path/to/files gs://<%= @study.bucket_id %></pre>
           <p class="lead"><strong class="text-danger">If you are uploading sequence files through the wizard, we recommend that they be compressed first using gzip.</strong></p>
