--- a/app/views/studies/retrieve_wizard_upload.js.erb
+++ b/app/views/studies/retrieve_wizard_upload.js.erb
@@ -1,3 +1,6 @@
+// populate window.SCP.currentStudyFiles with information about all known StudyFiles
+window.SCP.currentStudyFiles = <%= @study.study_files.available.map(&:attributes).to_json.html_safe %>
+
 // find form, select parent and replace contents with updated values
 $("<%= params[:selector] %>").replaceWith("<%= escape_javascript(render partial: params[:partial], locals: {study_file: @study_file, allow_only: @allow_only }) %>");
 
@@ -40,3 +43,6 @@ setTimeout(function() {
 
 // show/hide overlay preventing processed uploads, if needed
 setExpressionOverlay(<%= @block_processed_upload %>);
+
+// emit event to trigger updates to all raw counts select inputs
+$(window).trigger('updateRawCountsSelect')
